fixed alignment in home and student-informations component.

--- a/src/app/students/home/home.component.css
+++ b/src/app/students/home/home.component.css
@@ -2,6 +2,10 @@
   margin-bottom: 3%;
 }
 
+#div_app_report {
+  margin-top: 27px;
+}
+
 #containerInfo {
   width: 65%;
 }
